@@ -41,96 +41,7 @@
 //#define GC_DEBUG
 //#define OBJ_LIST_DEBUG
 
-typedef enum {
-  PAIR,
-  SYMBOL,
-  NUMBER,
-  STRING,
-  PRIMITIVE,
-  CLOSURE,
-  MACRO,
-  FORM,
-  EXCEPTION,
-  VECTOR,
-  NATIVE // define new types here
-} type_t ;
-
-typedef dfsch_object_t object_t;
-typedef dfsch_ctx_t context_t;
-
-typedef struct symbol_t symbol_t;
-
-struct symbol_t{
-  char *data;
-  //  object_t *next;
-  //  object_t *prev;
-};
-
-
-struct dfsch_ctx_t{
-  object_t* env;
-};
-
-typedef struct pair_t{
-  object_t *car;
-  object_t *cdr;
-} pair_t;
-
-typedef struct primitive_t {
-
-  dfsch_primitive_t proc;
-  void *baton;
-
-} primitive_t;
-
-typedef struct closure_t{
-  object_t* args;
-  object_t* code;
-  object_t* env;
-  object_t* name;
-} closure_t;
-
-typedef struct exception_t{
-  object_t *type;
-  object_t *data;
-} exception_t; 
-
-typedef struct native_t {
-  
-  object_t* type;
-  void *data; 
-
-} native_t;
-typedef struct vector_t {
-  
-  size_t length;
-  object_t** data;
-
-} vector_t;
-
-
-struct dfsch_object_t{
-  type_t type;
-  union {
-    pair_t pair;
-    symbol_t symbol;
-    double number;
-    char* string;
-    primitive_t primitive;
-    closure_t closure;
-    object_t *macro;
-    exception_t exception;
-    vector_t vector;
-    native_t native;
-  } data;
-};
-
-
-
-
-
-
-#define EXCEPTION_CHECK(x) {if (dfsch_object_exception_p(x)) return x;}
+#include "object.h"
 
 static object_t* make_object(type_t type){
   object_t* o = GC_MALLOC(sizeof(object_t));
